# compiler-slides

./: 00.tex  01.tex  02.tex  03.tex  Makefile  README.md  packages.tex
src/: Makefile.inc  beamercolorthemecot.sty  packages.tex  preamble.tex
src/00/: 00-main.tex  00.tex  Makefile
src/00-llvm-welcome/: Makefile  main.tex
src/00-welcome/: main.tex
src/01/: 00-main.tex  01.tex  10-intro.tex  30-algo-design.tex  40-inside.tex  50-lang.tex  60-conc.tex  Makefile
src/01-llvm-structure/: 10-intro.tex  20-compiler-org.tex  30-algo-design.tex  40-inside.tex  40.1-ir.tex  40.2-cfg.tex  50-lang.tex  60-conc.tex  bibliography.bib  main.tex
src/01-structure/: 20-compiler-org.tex  30-algo-design.tex  50-lang.tex  60-conc.tex  main.tex
src/02/: 00-main.tex  02.tex  10-docs.tex  20-normalization.tex  30-analysis.tex  99-conc.tex  Makefile
src/02-llvm-passes/: 10-docs.tex  20-normalization.tex  30-analysis.tex  99-conc.tex  bibliography-2.bib  main.tex
src/02-passes/: 10-docs.tex  20-normalization.tex  30-analysis.tex  main.tex
src/03/: 00-main.tex  (+2 more)
src/03-llvm-howto/example/llvm18-mini-mem2reg/: CMakeLists.txt  README.md
src/03-llvm-howto/example/llvm18-mini-mem2reg/MiniMem2Reg/: CMakeLists.txt  MiniMem2Reg.cpp  MiniMem2Reg.h  PassPluginInfo.cpp
src/03-llvm-howto/example/llvm18-mini-mem2reg/test/: test.c  test.ll
src/03-llvm-howto/example/llvm18-pass-demo/: CMakeLists.txt  README.md
src/03-llvm-howto/example/llvm18-pass-demo/LLVMHello/: CMakeLists.txt  Hello.cpp  Hello.h  PassPluginInfo.cpp
src/03-llvm-howto/example/llvm18-pass-demo/test/: test.c  test.ll
(+142 files in other folders)
